--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reactfinal-project",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://ajayghimire1998.github.io",
+  "homepage": "https://ajayghimire1998.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
@@ -21,12 +21,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "json-server --watch db.json --port 4000",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d reactfinal-project"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "webpack-cli": "^4.9.2"
   }
 }
