--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reactfinal-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ajayghimire1998.github.io/",
+  "homepage": "https://ajayghimire1998.github.io/memebook",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
@@ -11,22 +11,23 @@
     "firebase": "^9.6.10",
     "json-server": "^0.17.0",
     "node-sass": "^7.0.1",
-    "react": "^18.0.0",
+    "react": "^17.0.0",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.29.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.72.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "webpack --mode production",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "json-server --watch db.json --port 4000",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d reactfinal-project"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
